fix silent mode

--- a/restart_server/dockerfile
+++ b/restart_server/dockerfile
@@ -6,8 +6,8 @@ WORKDIR '/src/app'
 
 # install and cache app dependencies
 COPY package.json ./
-RUN npm install
-RUN npm install react-scripts -g
+RUN npm install --silent
+RUN npm install react-scripts -g --silent
 COPY . .
 
 # start app
