--- a/restart_server/dockerfile
+++ b/restart_server/dockerfile
@@ -6,9 +6,8 @@ WORKDIR '/src/app'
 
 # install and cache app dependencies
 COPY package.json ./
-RUN npm install --silent
-RUN npm install react-scripts -g --silent
+# RUN npm install --silent
+# RUN npm install react-scripts -g --silent
 COPY . .
 
 # start app
-CMD ["npm", "start"]
